# crawler_yahoo_finance

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/crawler/: parser.py  scraper.py
src/data_handler/: file_handler.py  models.py
src/utils/: logger.py  retry.py  settings.py
test/: conftest.py  const_fixtures.py  factories.py  test_file_handler.py  test_parser.py
